--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
 body{
     text-align:center;
+	background-color: blanchedalmond;
+	font-family: 'Orbitron', sans-serif;
 }		
 table{
 margin:auto;}	
